--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ target/
 *.iml
 .DS_Store
 */src/main/resources/application-secret.properties
+*kafka-producer-twitter/src/main/resources/application-secret.properties
