- To add commentaries

--- a/kafka-connect/twitter.properties
+++ b/kafka-connect/twitter.properties
@@ -5,6 +5,7 @@ connector.class=com.github.jcustenborder.kafka.connect.twitter.TwitterSourceConn
 # Set these required values
 process.deletes=false
 filter.keywords=bitcoin
+# Note: The Topics must be created manually previously
 kafka.status.topic=twitter_status_connect
 kafka.delete.topic=twitter_deletes_connect
 # put your own credentials here - don't share with anyone
